[JBTM-1156] IPv6 config