@@ -16,6 +16,11 @@
 	<packaging>pom</packaging>
 	<name>localjunit tests for xts</name>
 	<description>localjunit tests for xts</description>
+        <properties>
+                <general.server.jvm.args>-Xms64m -Xmx1024m -XX:MaxPermSize=512m</general.server.jvm.args>
+                <ipv4.server.jvm.args></ipv4.server.jvm.args>
+                <ipv6.server.jvm.args>-Djboss.bind.address=[::1] -Djboss.bind.address.management=[::1] -Djboss.bind.address.unsecure=[::1] -Djava.net.preferIPv4Stack=false -Djava.net.preferIPv6Addresses=true</ipv6.server.jvm.args>
+        </properties>
 
 	<dependencies>
 		<dependency>
@@ -75,7 +80,7 @@
 							<!--
 							  Used in arquillian.xml
 							-->
-							  <server.jvm.args>${jvm.args.ip}</server.jvm.args>
+							  <server.jvm.args>${general.server.jvm.args} ${ipv4.server.jvm.args}</server.jvm.args>
 							</systemPropertyVariables>
 						</configuration>
 					</plugin>
@@ -105,7 +110,7 @@
 							<!--
 							  Used in arquillian.xml
 							-->
-							  <server.jvm.args>-Djava.net.preferIPv4Stack=false -Djava.net.preferIPv6Addresses=true</server.jvm.args>
+							  <server.jvm.args>${general.server.jvm.args} ${ipv6.server.jvm.args}</server.jvm.args>
 							</systemPropertyVariables>
 						</configuration>
 					</plugin>
